--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Conference Template</title>
+    <title>MITOTI2025</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/vandy.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Middleware for </span><span class="title2">IT/OT Integration</span> <span class="year">2525</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            December 31, 2525 <br> Vanderbilt University, Nashville, TN, USA
         </div>
     </div>
 
@@ -44,34 +44,29 @@
         </tr>
     </table>
 
-    <h2>What is This Website?</h2>
+    <h2>Middleware for IT/OT Integration - MITOTI 2025</h2>
     <p>
-        This website is a template that you could use for a (small) academic conference. 
-        It&rsquo;s got a page for registration, where you can embed a Google Form or some other way for participants to register.
-        It&rsquo;s got a program page to list the schedule for the conference.
-        It&rsquo;s got a directions page to add a bunch of instructions how to get to the conference.
-        It&rsquo;s got a page to put up the flyers and other promotional materials for folks to download.
+        xxx. 
+        xxxx.
+        xxxx
+        xxxx.
     </p>
     <p>
-        You can use this template by cloning all the files from this
-        <a target="_blank" href="https://github.com/mikepierce/conference-website-template">GitHub repo here</a>.
-        This template was created from a website I made for 
-        <a target="_blank" href="http://math.ucr.edu/~mathconn/">MathConnections 2019</a>,
-        in case you want to see an example of this template being used in the wild.
+        xxxxx
     </p>
     <p>
-        This paragraph is just some filler text to give the homepage some volume:
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
+    xxxxx
     </p>
 
     <h2>Organizers</h2>
     <p>
-        Here&rsquo;s a good place to list the organizers and sponsors of the conference,
-        as well as list contact information for the organizers,
-        and show off the logos of the sponsors.
-        It looks like his conference was sponsored by kittens!
+        Name 1, Affiliation 1<br>
+        Name 2, Affiliation 2<br>
+        Name 3, Affiliation 3<br>
+        Name 4, Affiliation 4<br>
+        Name 5, Affiliation 5<br>
     </p>
-    <table class="sponsors">
+    <!-- <table class="sponsors">
         <tr>
             <td class="sponsor">
                 <a href="http://www.eyebleach.me/">
@@ -90,10 +85,10 @@
             </td>
         </tr>
     </table>
-
+ -->
     <footer>
-        &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; MITOTI 2025
+        &nbsp;|&nbsp;  <a href="https://www.vanderbilt.edu/">Vanderbilt University, Nashville, TN, USA</a>
     </footer>
 
 </body>
