--- a/registration/index.html
+++ b/registration/index.html
@@ -9,18 +9,18 @@
     <meta name="resource-type" content="document">
     <meta name="distribution" content="global">
     <meta name="KeyWords" content="Conference">
-    <title>Registration | Conference Template</title>
+    <title>Registration | MITOTI2025</title>
 </head>
 
 <body>
 
     <div class="banner">
-        <img src="assets/banner.jpg" alt="Conference Template Banner">
+        <img src="assets/Nashville_Vandy.jpg" alt="Conference Template Banner">
         <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+            <span class="title1">Middleware for </span><span class="title2">IT/OT Integration</span> <span class="year">2525</span>
         </div>
         <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
+            December 31, 2525 <br> Vanderbilt University, Nashville, TN, USA
         </div>
     </div>
 
@@ -46,7 +46,7 @@
 
     <br>
 
-    <p>
+    <!-- <p>
         Here&rsquo;s where you provide instructions how to register for your conference.
         We used a <a href="https://www.google.com/forms/about/">Google Form</a> 
         and embedded it into an <i>iframe</i> (it&rsquo;s commented out in the html here).
@@ -57,11 +57,11 @@
     <p>
         Here&rsquo;s another paragraph of filler text:
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum dignissim et est et euismod. Fusce et metus tempus, pellentesque ex at, convallis nulla. Ut fringilla commodo tincidunt. Fusce sed est eu massa placerat iaculis eu at mauris. Nullam ut mollis nisi, quis malesuada risus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam ipsum tortor, suscipit non tincidunt vel, bibendum in libero. Nulla facilisi. Pellentesque vitae neque metus. Cras quis est pharetra, vestibulum nisl et, viverra ipsum. Etiam porta dignissim purus, quis tempor metus volutpat eu. Praesent pulvinar libero eget purus tincidunt finibus.
-    </p>
+    </p> -->
 
     <footer>
-        &copy; Conference Organizers
-        &nbsp;|&nbsp; Design by <a href="https://github.com/mikepierce">Mike Pierce</a>
+        &copy; MITOTI 2025
+        &nbsp;|&nbsp;  <a href="https://www.vanderbilt.edu/">Vanderbilt University, Nashville, TN, USA</a>
     </footer>
 
 </body>
