--- a/index.html
+++ b/index.html
@@ -1,72 +1,247 @@
 <!DOCTYPE html>
 <html lang='en'>
 
-<head>
-    <base href=".">
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-    <link rel="stylesheet" type="text/css" media="all" href="assets/main.css"/>
-    <meta name="description" content="Conference Template">
-    <meta name="resource-type" content="document">
-    <meta name="distribution" content="global">
-    <meta name="KeyWords" content="Conference">
-    <title>MITOTI2025</title>
-</head>
+    <head>
+        <base href=".">
+        <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+        <link rel="stylesheet" type="text/css" media="all"
+            href="assets/main.css" />
+        <meta name="description" content="Conference Template">
+        <meta name="resource-type" content="document">
+        <meta name="distribution" content="global">
+        <meta name="KeyWords" content="Conference">
+        <title>MITOTI2025</title>
+    </head>
 
-<body>
+    <body>
 
-    <div class="banner">
-        <img src="assets/vandy.jpg" alt="Conference Template Banner">
-        <div class="top-left">
-            <span class="title1">Middleware for </span><span class="title2">IT/OT Integration</span> <span class="year">2525</span>
+        <div class="banner">
+            <img src="assets/vandy.jpg" alt="Conference Template Banner">
+            <div class="top-left">
+                <span class="title1">Middleware  </span><span
+                    class="title2">for IT/OT </span> <span
+                    class="year">Integration</span>
+            </div>
+            <div class="bottom-right">
+                December 15, 2525 <br> Vanderbilt University, Nashville, TN, USA
+            </div>
         </div>
-        <div class="bottom-right">
-            December 31, 2525 <br> Vanderbilt University, Nashville, TN, USA
-        </div>
-    </div>
 
-    <table class="navigation">
-        <tr>
-            <td class="navigation">
-                <a class="current" title="Conference Home Page" href=".">Home</a>
-            </td>
-            <td class="navigation">
-                <a title="Register for the Conference" href="registration">Registration</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Program" href="program">Program</a> 
-            </td>
-            <td class="navigation">
-                <a title="Directions to the Conference" href="directions">Directions</a>
-            </td>
-            <td class="navigation">
-                <a title="Conference Flyer" href="flyer">Flyer</a>
-            </td>
-        </tr>
-    </table>
+        <table class="navigation">
+            <tr>
+                <td class="navigation">
+                    <a class="current" title="Conference Home Page"
+                        href=".">Home</a>
+                </td>
+                <td class="navigation">
+                    <a title="Register for the Conference"
+                        href="registration">Registration</a>
+                </td>
+                <td class="navigation">
+                    <a title="Conference Program" href="program">Program</a>
+                </td>
+                <td class="navigation">
+                    <a title="Directions to the Conference"
+                        href="directions">Directions</a>
+                </td>
+                <td class="navigation">
+                    <a title="Conference Flyer" href="flyer">Flyer</a>
+                </td>
+            </tr>
+        </table>
 
-    <h2>Middleware for IT/OT Integration - MITOTI 2025</h2>
-    <p>
-        xxx. 
-        xxxx.
-        xxxx
-        xxxx.
-    </p>
-    <p>
-        xxxxx
-    </p>
-    <p>
-    xxxxx
-    </p>
+        <h4>The 1st International Workshop on Middleware for IT/OT Integration
+            (MITOTI 2025) </h4>
+        <p>
+            IT/OT integration bridges the gap between Information Technology
+            (IT) systems, which manage data and business processes, and
+            Operational Technology (OT) systems, which control and monitor
+            industrial operations. It is a foundational element to drive digital
+            transformation across industries. This convergence enables real-time
+            data sharing and collaboration between enterprise-level applications
+            and physical machinery, leading to smarter decision-making, improved
+            efficiency, enhanced productivity, greater operational transparency,
+            and enhanced safety. Developing middleware for integrated solutions
+            that bridge the digital and physical worlds unlocks the full
+            potential of the Industrial Internet of Things (IIoT) and paves the
+            way for smarter, more resilient operations. Despite challenges like
+            legacy systems and differing priorities, successful IT/OT
+            integration is a cornerstone of modern, data-driven industrial
+            environments.
 
-    <h2>Organizers</h2>
-    <p>
-        Name 1, Affiliation 1<br>
-        Name 2, Affiliation 2<br>
-        Name 3, Affiliation 3<br>
-        Name 4, Affiliation 4<br>
-        Name 5, Affiliation 5<br>
-    </p>
-    <!-- <table class="sponsors">
+        </p>
+        <p>
+            The primary goal of this workshop is to address the challenges and
+            present advanced and innovative algorithms, models, techniques,
+            architectures, specifications, tools, and frameworks that bring
+            diverse middleware technologies at the interaction of Information
+            Technology (IT) and Operational Technology (OT). Contributions
+            addressing both theoretical and practical applications, including
+            but not limited to, the following topics are sought for submission:
+
+        </p>
+        <p>
+            <ul>
+                <li> - Recent developments and future perspective of middleware
+                    for IT/OT integration.</li>
+                <li> - Middleware for edge-cloud continuum.</li>
+                <li> - Software as a Service (SaaS) for OT.</li>
+                <li> - Serverless and Function-as-a-Service computing for OT.</li>
+                <li> - Middleware framework for robotics, ROS, and human-robot Interactions.</li>
+                <li> - Middleware for converged infrastructure and IoT environment.</li>
+                <li> - Platforms and frameworks for constraint devices.</li>
+                <li> - Orchestration of IoT devices.</li>
+                <li> - Monitoring and resource management of constraint devices.</li>
+                <li> - AI based techniques for IT/OT integration.</li>
+                <li> - IT-OT security issues.</li>
+            </ul>
+        </p>
+        <p> <strong> Format (Half Day)</strong><br />
+            Since this is the first offering of such a workshop, we propose that
+            the MITOTI'25 workshop be organized as a half day workshop. However,
+            if we receive a higher number of submissions and expression of
+            interest from the community, we will request an extension to a full
+            day workshop. MITOTI'25 will comprise 1-2 keynote speeches followed
+            by technical presentations. The workshop will end with a group
+            discussion among the participants discussing future directions and
+            topics of importance. Depending on the quality of the presentations
+            and discussions, we may plan a special issue of a journal, such as
+            at Elsevier Journal of Systems Architecture or IEEE Internet of
+            Things.
+        </p>
+        <p>
+
+            <strong>Keynote Speakers: </strong>
+            <ul>
+                <li><strong> - Martin Lehofer, Practice Manager - Industrial Data, Amazon.</strong>
+                    Role of SaaS in manufacturing operations. (Tentative)</li>
+                <li> <strong>- Chris Woods, Senior Key Expert, Siemens. </strong>Role of Web
+                    Assembly in IT/OT integration</li>
+            </ul>
+        </p>
+        <p>
+            <strong>Submission, Review, and Publication Process:</strong>
+            MITOTI 2025 proceedings will be published in the ACM Digital
+            Library. Authors are invited to submit original, unpublished
+            research papers. Papers must be written in English and strictly
+            following ACM SIGCONF style as prescribed on the main Middleware
+            2025 website. Papers are to be submitted through the HotCRP system.
+            <br>
+
+            Two types of submissions are accepted:
+            <ul>
+                <li> <strong>- Regular research papers:</strong> contributions should describe
+                    original work (up to 6 pages including all text, figures,
+                    references, and appendices).</li>
+                <li> <strong>- Short papers and position papers:</strong> Research in progress,
+                    tools presentations, and new ideas (up to 4 pages including
+                    all text, figures, references, and appendices).</li>
+            </ul>
+
+            Submitted papers will be evaluated according to their rigor,
+            significance, originality, technical quality and exposition, by at
+            least three distinct members of an international program committee.
+            At least one author of each accepted paper must register and
+            participate in the workshop. Registration is subject to the terms,
+            conditions, and procedures of the <a
+                href="https://middleware-conf.github.io/2025/"
+                target="_blank">main conference</a> :
+        </p>
+
+        <p>
+            Important Dates
+            <ul>
+                <li> <strong>- Paper submission deadline: </strong> September 24th, 2025 </li>
+                <li> <strong>- Notification of acceptance:</strong> October 19th, 2025</li>
+                <li> <strong>- Camera-ready version due: </strong>October 27th, 2025 (aligned with conference deadline)</li>
+                <li> <strong>- Workshop date:</strong> December 15th, 2025 </li>
+            </ul>
+        </p>
+        <h2>Organizers</h2>
+        <p>
+
+            <strong>Shashank Shekhar</strong> is a Senior Key Expert at Siemens
+            Foundational Technologies, Princeton, New Jersey. He received his
+            Ph.D. and M.S. in Computer Science from Vanderbilt University and
+            has performed extensive research in the areas of platform,
+            industrial IoT, computer networks, middleware and resource
+            management of distributed systems. He has published papers in top
+            journals and conferences and also has best paper award, book
+            chapters and patents to his name. Prior to joining Siemens, he
+            worked for Teradata, Hewlett Packard and Red Hat. His current
+            research focuses on resiliency, communication and performance
+            aspects of AI/ ML platforms, industrial automation and control
+            systems while driving the research for workload placement across
+            edge and cloud resource spectrum for assuring performance of
+            real-time and mission critical applications IT/OT systems.
+
+            <br>
+            <strong>Chris Woods </strong>is a Senior Key Expert at Siemens
+            Foundational Technologies, Princeton, New Jersey. His research areas
+            include runtimes and virtualization for distributed systems, focused
+            on edge and cloud integration. Prior to joining Siemens Chris worked
+            at Huawei research in Ireland, focusing on cloud and mobile 5G
+            integration. He worked at Intel Labs Ireland conducting data center
+            management research. Before entering industrial research, Chris
+            worked at Microsoft Ireland where he led teams creating the initial
+            infrastructure for the Azure cloud. Prior to this, Chris focused on
+            embedded C++ and mobile phone operating systems. He has published
+            papers on cloud infrastructure and has several patents in the space.
+            He recently founded the Embedded Special Interest Group for
+            WebAssembly and is supporting Siemens and other companies in its use
+            in industrial settings.<br>
+            <strong>Ajay Chhokra</strong> is a Research Scientist at the
+            Institute for Software Integrated Systems affiliated with Vanderbilt
+            University. His primary research interests are in the dynamic
+            management of large-scale, highly distributed, safety-critical
+            cyber-physical systems (CPS). He received his Ph.D. in Electrical
+            Engineering from Vanderbilt University, with a focus on model-based
+            and data-driven techniques for diagnosing failures in cyber-physical
+            energy systems. Before joining Vanderbilt, he worked as a senior
+            research professional at Siemens, where he designed various testbeds
+            to evaluate the resiliency of secondary and tertiary microgrid
+            control algorithms, as well as explored the use of WebAssembly for
+            real-time CPS use cases. His current research focuses on designing
+            resilient and high-performance operational platforms for smart
+            transit systems.
+            <br>
+            <strong>Aniruddha S Gokhale </strong> is a Full Professor of
+            Computer Science and Engineering, with a primary appointment in the
+            Dept of Computer Science, and a Senior Research Scientist at the
+            Institute for Software Integrated Systems (ISIS) both at Vanderbilt
+            University. His primary research interests are in blending software
+            engineering principles (e.g., design patterns, modeling) with
+            systems research to address challenging distributed systems
+            problems. Currently his research focuses on addressing these
+            challenges in the context of Cloud/Edge Computing, Internet of
+            Things, 5G+ networking and Assuredly Autonomous Systems. He has been
+            awarded the prestigious NSF CAREER award. He has also served as
+            PI/Co-PI on a number of projects sponsored by NSF, DARPA, DoD and
+            industry. He is a senior member of both IEEE and ACM, and a member
+            of USENIX. He is the General Chair of Middleware’25.
+        </p>
+
+        <p>
+            <strong>Program Committee </strong>
+            <ul>
+                <li> - Kyoungho An, RTI, USA</li>
+                <li> - Shreyas Ramakrishna, Nvidia, USA</li>
+                <li> - Ziran Min, Siemens, USA</li>
+                <li> - Anirban Bhattacharjee, Intel, USA</li>
+                <li> - Qingze Zhou, Rutgers University, USA</li>
+                <li> - Stephen Berard, Atym, France</li>
+                <li> - Emily Ruppel, Bosch, USA</li>
+                <li> - Anand Todkar, Siemens, USA</li>
+                <li> - Thomas Trenner, Siemens, Germany</li>
+                <li> - Alin Murarasu, Siemens, Germany</li>
+                <li> - Florian Frick, Univ of Stuttgart, Germany</li>
+                <li> - Bryan Ward, Vanderbilt Univ, USA</li>
+                <li> - Daniel Balasubramanian, Vanderbilt Univ, USA</li>
+
+            </ul>
+        </p>
+
+        <!-- <table class="sponsors">
         <tr>
             <td class="sponsor">
                 <a href="http://www.eyebleach.me/">
@@ -86,11 +261,11 @@
         </tr>
     </table>
  -->
-    <footer>
-        &copy; MITOTI 2025
-        &nbsp;|&nbsp;  <a href="https://www.vanderbilt.edu/">Vanderbilt University, Nashville, TN, USA</a>
-    </footer>
+        <footer>
+            &copy; MITOTI 2025
+            &nbsp;|&nbsp; <a href="https://www.vanderbilt.edu/">Vanderbilt
+                University, Nashville, TN, USA</a>
+        </footer>
 
-</body>
+    </body>
 </html>
-
