--- a/flyer/index.html
+++ b/flyer/index.html
@@ -14,14 +14,17 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/Nashville_downtown_scaled.jpg" alt="Conference Template Banner">
-        <div class="top-left">
-            <span class="title1">Middleware for </span><span class="title2">IT/OT Integration</span> <span class="year">2525</span>
-        </div>
-        <div class="bottom-right">
-            December 31, 2025 <br> Vanderbilt University, Nashville, TN, USA
-        </div>
+        <div class="banner">
+            <img src="assets/vandy.jpg" alt="Conference Template Banner">
+            <div class="top-left">
+                <span class="title1">Middleware  </span><span
+                    class="title2">for IT/OT </span> <span
+                    class="year">Integration</span>
+            </div>
+            <div class="bottom-right">
+                December 15, 2025 <br> Vanderbilt University, Nashville, TN, USA
+            </div>
+        </div>iv>
     </div>
     <table class="navigation">
         <tr>
@@ -42,7 +45,8 @@
             </td>
         </tr>
     </table>
-    Coming soon! This page will be updated with the flyer for the conference as it becomes available.
+      <h2>Flyer</h2>
+    Coming soon! 
 
 
 
