--- a/program/index.html
+++ b/program/index.html
@@ -17,15 +17,17 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/Nashville_downtown.jpg" alt="Conference Template Banner">
-        <div class="top-left">
-            <span class="title1">Middleware for </span><span class="title2">IT/OT Integration</span> <span class="year">2525</span>
+        <div class="banner">
+            <img src="assets/vandy.jpg" alt="Conference Template Banner">
+            <div class="top-left">
+                <span class="title1">Middleware  </span><span
+                    class="title2">for IT/OT </span> <span
+                    class="year">Integration</span>
+            </div>
+            <div class="bottom-right">
+                December 15, 2025 <br> Vanderbilt University, Nashville, TN, USA
+            </div>
         </div>
-        <div class="bottom-right">
-            December 31, 2025 <br> Vanderbilt University, Nashville, TN, USA
-        </div>
-    </div>
 
     <table class="navigation">
         <tr>
@@ -48,7 +50,7 @@
     </table>
 
     <h2>Conference Program</h2>
-    Coming soon! This page will be updated with the program for the conference as it becomes available.
+    Coming soon! 
 
 
 
