--- a/directions/index.html
+++ b/directions/index.html
@@ -14,15 +14,17 @@
 
 <body>
 
-    <div class="banner">
-        <img src="assets/Nashville_downtown.jpg" alt="Conference Template Banner">
-        <div class="top-left">
-            <span class="title1">Conference</span><span class="title2">Template</span> <span class="year">2525</span>
+        <div class="banner">
+            <img src="assets/vandy.jpg" alt="Conference Template Banner">
+            <div class="top-left">
+                <span class="title1">Middleware  </span><span
+                    class="title2">for IT/OT </span> <span
+                    class="year">Integration</span>
+            </div>
+            <div class="bottom-right">
+                December 15, 2025 <br> Vanderbilt University, Nashville, TN, USA
+            </div>
         </div>
-        <div class="bottom-right">
-            June 31, 2525 <br> University Name, and City Maybe
-        </div>
-    </div>
 
     <table class="navigation">
         <tr>
@@ -46,7 +48,7 @@
 
 
     <h2>Directions</h2>
-    Coming soon! This page will be updated with directions to the conference as it becomes available.
+    Coming soon! 
 
    <footer>
         &copy; MITOTI 2025
