--- a/flyer/index.html
+++ b/flyer/index.html
@@ -24,7 +24,7 @@
             <div class="bottom-right">
                 December 15, 2025 <br> Vanderbilt University, Nashville, TN, USA
             </div>
-        </div>iv>
+        </div>
     </div>
     <table class="navigation">
         <tr>
